# tjland

./: App.toml  Cargo.toml  README.md  setup.sh
.github/workflows/: rust_base.yml
backend/: Cargo.toml
backend/src/: cors.rs  data.rs  error.rs  main.rs  middleware.rs  prelude.rs  tests.rs
backend/src/utils/: macros.rs  try_froms.rs
frontend/: Cargo.toml
src/: app.rs  main.rs
